Removed margin-top from h1. Might be a netlify issue regarding whitespace at the top.

--- a/src/components/header-bar.css
+++ b/src/components/header-bar.css
@@ -11,7 +11,6 @@
 }
 
 .header-bar > h1 {
-  margin-top: 0px;
   border: solid 1px black;
   border-radius: 5px;
   background-color: white;
